--- a/emoji.html
+++ b/emoji.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-NB23QKNSN4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-NB23QKNSN4');
+</script>
         <title>Emoji Finder</title>
 <meta charset="UTF-8">
     <meta name="description" content="A site to do random stuff if you're bored">
@@ -111,8 +119,7 @@ main {
   transform: translate(0, 10px);
 }
 </style>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6501023040597198"
-     crossorigin="anonymous"></script>
+
 </head>
 <body>
   <a href="index.html" ><img src="logo.png" width="75px" height="auto" style="float: left;"> </img></a>
