--- a/guesscode.html
+++ b/guesscode.html
@@ -2,7 +2,15 @@
 <html lang="en">
 
 <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-NB23QKNSN4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-NB23QKNSN4');
+</script>
     <title>Guess the code for legit reward!</title>
     <meta charset="UTF-8">
         <meta name="description" content="A site to do random stuff if you're bored">
@@ -13,8 +21,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="guesscode.css">
 <script   src="guesscode2.js"></script>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6501023040597198"
-     crossorigin="anonymous"></script>
+
 </head>
 <body>
 
