--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html> <!--new-->
 <html>
   <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-NB23QKNSN4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-NB23QKNSN4');
+</script>
     <title>thelostdocs.com fun stuff!</title>
     <meta charset="UTF-8">
     <meta name="description" content="A site to do random stuff if you're bored!">
@@ -15,9 +23,7 @@
     <style>
     body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     </style>
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6501023040597198"
-        crossorigin="anonymous"></script>
-    <meta name="google-site-verification" content="gtw17MUPkFX2hhePgWVU_Q3g5WdYPCpfY8bmhtRUuVE" />
+
   </head>
 <body class="w3-light-grey w3-content" style="max-width:1600px">
 
