--- a/paint.html
+++ b/paint.html
@@ -1,6 +1,14 @@
 <html>
     <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-NB23QKNSN4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-NB23QKNSN4');
+</script>
 
       <title>Microsoft Paint Online</title>
 <meta charset="UTF-8">
@@ -102,8 +110,7 @@
       padding: 10px;
     }
     </style>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6501023040597198"
-    crossorigin="anonymous"></script>
+
     </head>
     <body>
       <a href="index.html" ><img src="logo.png" width="100px" height="auto" style="float: left;"> </img></a>
