--- a/spendit.html
+++ b/spendit.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-NB23QKNSN4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-NB23QKNSN4');
+</script>
     <title>Spend Sashoti's bitcoin!</title>
     <meta charset="UTF-8">
         <meta name="description" content="A site to do random stuff if you're bored">
@@ -16,21 +24,11 @@
       content="Spend Bitcoin"
     />
 
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag('js', new Date());
-
-      gtag('config', 'G-8G10WY5JDN');
-    </script>
 
     <title>Spend Satoshi's Bitcoin</title>
     <link rel="stylesheet" href="spendit.css" />
     <link rel="icon" href="./img/icon.png" />
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6501023040597198"
-     crossorigin="anonymous"></script>
+
   </head>
   <body>
 
