--- a/congratsonsuccess.html
+++ b/congratsonsuccess.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-NB23QKNSN4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-NB23QKNSN4');
+</script>
 <title>You Succeeded!</title>
 <meta charset="UTF-8">
     <meta name="description" content="A site to do random stuff if you're bored">
@@ -15,8 +23,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 </style>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6501023040597198"
-     crossorigin="anonymous"></script>
+
 </head>
 <body>
   <a href="index.html" ><img src="logo.png" width="150px" height="auto" style="float: left;"> </img></a>
