--- a/location2.html
+++ b/location2.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-NB23QKNSN4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-NB23QKNSN4');
+</script>
         <title>Find your location by choosing your favourite things!</title>
         <meta charset="UTF-8">
         <meta name="description" content="A site to do random stuff if you're bored!">
@@ -16,8 +24,7 @@
         <style>
         body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
         </style>
-            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6501023040597198"
-            crossorigin="anonymous"></script>
+
 
             <script src="https://cdn.jsdelivr.net/npm/@opencage/maps@1/dist/ol.js"></script>
 
