--- a/music.html
+++ b/music.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-NB23QKNSN4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-NB23QKNSN4');
+</script>
         <title>Play Music!</title>
         <meta charset="UTF-8">
         <meta name="description" content="A site to do random stuff if you're bored!">
@@ -11,8 +19,6 @@
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" media="all">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" integrity="sha384-v8BU367qNbs/aIZIxuivaU55N5GPF89WBerHoGA4QTcbUjYiLQtKdrfXnqAcXyTv" crossorigin="anonymous">
 
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6501023040597198"
-        crossorigin="anonymous"></script>
     </head>
     <body>
     </a>  <a href="index.html" ><img src="logo.png" width="105px" height="auto"> </img></a>
