--- a/pcdownload.html
+++ b/pcdownload.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-4EXYD6265N"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-NB23QKNSN4"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-4EXYD6265N');
+  gtag('config', 'G-NB23QKNSN4');
 </script>
-
 <title>Speed up your PC</title>
 <meta charset="UTF-8">
     <meta name="description" content="A site to do random stuff if you're bored">
@@ -20,8 +18,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!--<link rel="stylesheet" href=""> -->
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6501023040597198"
-     crossorigin="anonymous"></script>
+
         </head>
 
         <body>
