--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
 <!-- Second Photo Grid-->
 <div class="w3-row-padding">
   <div class="w3-third w3-container w3-margin-bottom">
-<a href="paint.html"> <img src="https://icons.iconarchive.com/icons/dakirby309/simply-styled/256/Microsoft-Paint-icon.png" alt="Use the retro Microsoft Paint!" class="w3-hover-opacity" style="width:100%" </a>
+<a href="mandelbrotset.html"> <img src="https://thumbs.gfycat.com/PastDefiniteBrownbutterfly-size_restricted.gif" alt="Use the Mandelbrot set!" class="w3-hover-opacity" style="width:100%" </a>
     <div class="w3-container w3-white">
-      <p><b>Use Microsoft Paint in the web!</b></p>
-      <p>Updates coming soon!</p>
+      <p><b>Zoom in on the mandelbrot set!</b></p>
+      <p>Get beautiful colours using epic maths!</p>
     </div>
   </div>
   <div class="w3-third w3-container w3-margin-bottom">
