--- a/mandelbrotset2.html
+++ b/mandelbrotset2.html
@@ -1,49 +1,30 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <style>
-    #canvas {
-      width: 500px;
-      height: 500px;
-      border: 1px solid black;
-    }
-  </style>
-</head>
-<body>
-  <canvas id="canvas"></canvas>
-</body>
-<script>
-    const canvas = document.getElementById("canvas");
-const ctx = canvas.getContext("2d");
+  <head>
+    <title>Mandelbrot Set</title>
+  </head>
+  <body>
+    <script type="text/python">
+      # Python code to generate the Mandelbrot set
 
-const width = canvas.width;
-const height = canvas.height;
+      import numpy as np
+      import matplotlib.pyplot as plt
 
-const maxIterations = 100;
+      def mandelbrot(h,w, maxit=20):
+        """Return an image of the Mandelbrot fractal of size (h,w)"""
+        y,x = np.ogrid[-1.4:1.4:h*1j, -2:0.8:w*1j]
+        c = x+y*1j
+        z = c
+        divtime = maxit + np.zeros(z.shape, dtype=int)
+        for i in range(maxit):
+          z = z**2 + c
+          diverge = z*np.conj(z) > 2**2
+          div_now = diverge & (divtime==maxit)
+          divtime[div_now] = i
+          z[diverge] = 2
+        return divtime
 
-for (let x = 0; x < width; x++) {
-  for (let y = 0; y < height; y++) {
-    let real = (x - width / 2) * 4 / width;
-    let imag = (y - height / 2) * 4 / width;
-
-    let c = real + imag * Math.imul(imag, -1);
-    let z = 0 + 0 * Math.imul(0, -1);
-
-    let iterations = 0;
-
-    while (iterations < maxIterations && z.real * z.real + z.imag * z.imag < 4) {
-      let real2 = z.real * z.real - z.imag * z.imag;
-      let imag2 = 2 * z.real * z.imag;
-      z.real = real2 + c.real;
-      z.imag = imag2 + c.imag;
-      iterations++;
-    }
-
-    let color = iterations === maxIterations ? 0 : iterations * 255 / maxIterations;
-    ctx.fillStyle = `rgb(${color}, ${color}, ${color})`;
-    ctx.fillRect(x, y, 1, 1);
-  }
-}
-
-</script>
+      plt.imshow(mandelbrot(400,400))
+      plt.show()
+    </script>
+  </body>
 </html>
