--- a/whackamole.html
+++ b/whackamole.html
@@ -2,35 +2,80 @@
 <html>
   <head>
     <style>
-      #game-board {
+      /* Add your CSS styles here */
+      #game-container {
         width: 500px;
         height: 500px;
-        border: 1px solid black;
+        margin: 0 auto;
         position: relative;
       }
-      .hole {
+      #player {
         width: 50px;
         height: 50px;
-        border-radius: 25px;
-        background-color: green;
         position: absolute;
         bottom: 0;
-        transition: transform 0.5s;
+        left: 225px;
+        background-color: blue;
       }
-      .mole {
+      .obstacle {
         width: 50px;
         height: 50px;
-        border-radius: 25px;
-        background-color: brown;
         position: absolute;
-        bottom: 0;
-        transition: transform 0.5s;
+        background-color: red;
+      }
+      #scoreboard {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        font-size: 20px;
+        font-weight: bold;
       }
     </style>
   </head>
   <body>
-    <div id="game-board">
+    <div id="game-container">
+      <div id="player"></div>
+      <!-- Obstacles will be generated here -->
+      <div id="scoreboard">Score: 0</div>
     </div>
-    <script src="whackamole.js"></script>
-  </body>
-</html>
+    <script>
+      // Add your JavaScript code here
+      const player = document.querySelector("#player");
+      const gameContainer = document.querySelector("#game-container");
+      const scoreboard = document.querySelector("#scoreboard");
+      let score = 0;
+
+      // Generate obstacles
+      for (let i = 0; i < 5; i++) {
+        const obstacle = document.createElement("div");
+        obstacle.classList.add("obstacle");
+        obstacle.style.top = `${i * 100}px`;
+        obstacle.style.left = `${Math.floor(Math.random() * 450)}px`;
+        gameContainer.appendChild(obstacle);
+      }
+
+      // Move player with arrow keys
+      document.onkeydown = function(e) {
+        switch (e.keyCode) {
+          case 37: // left arrow
+            player.style.left = `${parseInt(player.style.left) - 50}px`;
+            break;
+          case 38: // up arrow
+            player.style.bottom = `${parseInt(player.style.bottom) + 50}px`;
+            break;
+          case 39: // right arrow
+            player.style.left = `${parseInt(player.style.left) + 50}px`;
+            break;
+          case 40: // down arrow
+            player.style.bottom = `${parseInt(player.style.bottom) - 50}px`;
+            break;
+        }
+
+        // Check for collision with obstacles
+        const obstacles = document.querySelectorAll(".obstacle");
+        for (const obstacle of obstacles) {
+          if (
+            parseInt(player.style.left) < parseInt(obstacle.style.left) + 50 &&
+            parseInt(player.style.left) + 50 > parseInt(obstacle.style.left) &&
+            parseInt(player.style.bottom) < parseInt(obstacle.style.top) + 50 &&
+            parseInt(player
