--- a/randomsite.html
+++ b/randomsite.html
@@ -9,7 +9,7 @@
 <body>
     <button id="random-btn">Go to a random website</button>
 <br><br>
-<iframe id="random-iframe" width="100%" height="auto"></iframe>
+<iframe id="random-iframe" width="100%" height=""></iframe>
 
 <style>
     button {
