--- a/seaskirmish.html
+++ b/seaskirmish.html
@@ -138,7 +138,7 @@ body, html {height: 100%}
 <style> 
 button{
 color:black;
-radius: 100px;
+border-radius: 20px;
 width: auto;
 height: 100px;
 }
