--- a/seaskirmishwaitinglist.html
+++ b/seaskirmishwaitinglist.html
@@ -131,7 +131,7 @@ body, html {height: 100%}
     </script>
     <br><br>
  <button class="btn lightbox-230497410042043" style="margin-top: 16px">
-        Sea Skirmish Waiting List
+      <h3><b>Sea Skirmish<br>Join the Waiting List</b></h3>
        </button>
   </center>
 
