--- a/seaskirmishwaitinglist.html
+++ b/seaskirmishwaitinglist.html
@@ -131,7 +131,7 @@ body, html {height: 100%}
     </script>
     <br><br>
  <button class="btn lightbox-230497410042043" style="margin-top: 16px">
-      <h3><b>Sea Skirmish:<br>Join the Waiting List</b></h3>
+      <h3><b>Sea Skirmish:<br>Join the Waiting List</b> Click Me </h3>
        </button>
   </center>
 
