--- a/music.html
+++ b/music.html
@@ -95,6 +95,11 @@
                 <span class="sound">Beethoven Epic Remix</span>
               </div>
             </div>
+                          <div data-key="79" class="key">
+                <kbd>o</kbd>
+                <span class="sound">La Campanella Remix</span>
+              </div>
+            </div>
 </centre>
 
             <audio data-key="65" src="sounds/clap.wav"></audio>
@@ -107,6 +112,8 @@
             <audio data-key="75" src="sounds/tom.wav"></audio>
             <audio data-key="76" src="sounds/tink.wav"></audio>
             <audio data-key="80" src="sounds/beethoven-epic-remix.wav"></audio>
+            <audio data-key="79" src="sounds/lacampanellaremix.mp3"></audio>
+
       
             <script>
                 function playSound(e) {
