--- a/music.html
+++ b/music.html
@@ -112,7 +112,7 @@
             <audio data-key="75" src="sounds/tom.wav"></audio>
             <audio data-key="76" src="sounds/tink.wav"></audio>
             <audio data-key="80" src="sounds/beethoven-epic-remix.wav"></audio>
-            <audio data-key="79" src="sounds/lacampanellaremix.mp3"></audio>
+            <audio data-key="79" src="sounds/la-campanella-remix.wav"></audio>
 
       
             <script>
