--- a/moneyclicker.html
+++ b/moneyclicker.html
@@ -68,6 +68,12 @@
         dps:100000000,
         name:"Lottery"
        },
+       Gold_Miner:{
+        amount:0,
+        cost:100000000000,
+        dps:1000000000,
+        name:"Lottery"
+       },
    
   
    }
