--- a/moneyclicker.html
+++ b/moneyclicker.html
@@ -80,6 +80,12 @@
         dps:1000000000,
         name:"Business Shares"
        },
+       Gold_Miner:{
+        amount:0,
+        cost:10000000000,
+        dps:1000000000,
+        name:"Gold Miner"
+       },
    
   
    }
