--- a/index.html
+++ b/index.html
@@ -118,17 +118,17 @@
 </div>
 
   <!--3rd-->
-<!--
+
   <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom">
-      <a href="location.html"> <img src="https://www.pngkit.com/png/detail/236-2364197_google-map-red-clipart-lokasi.png" alt="Get legit Amazon Giftcard" class="w3-hover-opacity" style="width:100%" </a>
+      <a href="moneyclicker.html"> <img src="https://d1e00ek4ebabms.cloudfront.net/production/6b7c5fa6-b824-4430-b544-2102ad555fd1.jpg" alt="Get legit Amazon Giftcard" class="w3-hover-opacity" style="width:100%" </a>
       <div class="w3-container w3-white">
         <br>
-        <a href="location.html" <p><b></b></p><a>
-        <p></p>
+        <a href="moneyclicker.html" <p></p><b>Money Clicker!</b></p><a>
+        <p>Like cookieclicker, but for money!</p>
       </div>
     </div>
-    </div>-->
+    </div>
 
    <!-- next -->
    <div class="w3-row-padding w3-padding-16" id="about">
