--- a/quiz.html
+++ b/quiz.html
@@ -6,6 +6,7 @@
 <body>
 	<div class="container">
 		<h1>Quiz Game</h1>
+        <h3>Please contact me if any correct answers are marked as incorrect (or vice-versa)</h3>
 		<p id="question"></p>
 		<div class="options">
 			<button id="option0" onclick="checkAnswer(0)" disabled></button>
@@ -407,12 +408,12 @@ button:disabled {
 
 #result {
 	font-weight: bold;
-	margin-top: 20px;
+	margin-top: 30px;
 }
 
 #score {
 	font-weight: bold;
-	margin-top: 20px;
+	margin-top: 30px;
 }
 
         </style>
