--- a/index.html
+++ b/index.html
@@ -102,14 +102,14 @@
     </div>
   </div>
   <div class="w3-third w3-container w3-margin-bottom">
-<a href="music.html"> <img src="https://www.adobe.com/content/dam/cc/us/en/creativecloud/video/discover/how-to-mix-music/desktop/mix-music_P1_900x420.jpg.img.jpg" alt="Wait for infinity" style="width:100%" class="w3-hover-opacity"> </a>
+<a href="music.html"> <img src="https://www.adobe.com/content/dam/cc/us/en/creativecloud/video/discover/how-to-mix-music/desktop/mix-music_P1_900x420.jpg.img.jpg" alt="Music maker" style="width:100%" class="w3-hover-opacity"> </a>
     <div class="w3-container w3-white">
 <a href="music.html"> <p><b>The best music mixer ever!</b></p>
       <p>Upload your own music or try our sample music!</p> </a>
     </div>
   </div>
   <div class="w3-third w3-container">
-    <a href="location.html"> <img src="https://www.pngkit.com/png/detail/236-2364197_google-map-red-clipart-lokasi.png" alt="PC Resources" class="w3-hover-opacity" style="width:100%" </a>
+    <a href="location.html"> <img src="https://www.pngkit.com/png/detail/236-2364197_google-map-red-clipart-lokasi.png" alt="Location finder" class="w3-hover-opacity" style="width:100%" </a>
     <div class="w3-container w3-white">
       <p><b>I will guess your location!</b></p>
       <p>I can determine your location from your favourite colour, number etc.</p>
@@ -121,7 +121,7 @@
 
   <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom">
-      <a href="moneyclicker.html"> <img src="https://d1e00ek4ebabms.cloudfront.net/production/6b7c5fa6-b824-4430-b544-2102ad555fd1.jpg" alt="Get legit Amazon Giftcard" class="w3-hover-opacity" style="width:100%" </a>
+      <a href="moneyclicker.html"> <img src="https://d1e00ek4ebabms.cloudfront.net/production/6b7c5fa6-b824-4430-b544-2102ad555fd1.jpg" alt="Money clicker" class="w3-hover-opacity" style="width:100%" </a>
       <div class="w3-container w3-white">
         <br>
         <a href="moneyclicker.html" <p></p><b>Money Clicker!</b></p><a>
@@ -129,6 +129,17 @@
       </div>
     </div>
     </div>
+
+    <div class="w3-row-padding">
+      <div class="w3-third w3-container w3-margin-bottom">
+        <a href="quiz.html"> <img src="https://53.fs1.hubspotusercontent-na1.net/hub/53/hubfs/google-quiz.jpg?width=595&height=400&name=google-quiz.jpg" alt="Quiz" class="w3-hover-opacity" style="width:100%" </a>
+        <div class="w3-container w3-white">
+          <br>
+          <a href="quiz.html" <p></p><b>Multiple Choice Quiz</b></p><a>
+          <p>Fun quiz with score counter.</p>
+        </div>
+      </div>
+      </div>
 
    <!-- next -->
    <div class="w3-row-padding w3-padding-16" id="about">
