--- a/quiz.html
+++ b/quiz.html
@@ -2,8 +2,15 @@
 <html>
 <head>
 	<title>Quiz Game</title>
+    <meta charset="UTF-8">
+    <meta name="description" content="Fun quiz">
+    <meta name="keywords" content="fun, neal.fun, boredbutton, bored, have fun,">
+    <meta name="author" content="NicoWebCreations">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.png">
 </head>
 <body>
+</a>  <a href="index.html" ><img src="logo.png" width="105px" height="auto"> </img></a>
 	<div class="container">
 		<h1>Quiz Game</h1>
         <h4>Please contact me if any correct answers are marked as incorrect (or vice-versa)</h4>
