--- a/moneyclicker.html
+++ b/moneyclicker.html
@@ -134,6 +134,7 @@
   
 </script>
 </head>
+<a href="index.html" ><img src="logo.png" width="105px" height="auto"> </img></a>
 <centre>
 <body onload="updatecount()">
 <h1 id="dollars">You have $&nbsp;&nbsp;  __$0__ </h1>
