--- a/quiz.html
+++ b/quiz.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/x-icon" href="favicon.png">
 </head>
 <body>
-</a>  <a href="index.html" ><img src="logo.png" width="105px" height="auto"> </img></a>
+<a href="index.html" ><img src="logo.png" width="105px" height="auto"> </img></a>
 	<div class="container">
 		<h1>Quiz Game</h1>
         <h4>Please contact me if any correct answers are marked as incorrect (or vice-versa)</h4>
