--- a/index.html
+++ b/index.html
@@ -120,6 +120,36 @@
 
   <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom">
+  <a href="moneyclicker.html"> <img src="https://d1e00ek4ebabms.cloudfront.net/production/6b7c5fa6-b824-4430-b544-2102ad555fd1.jpg" alt="Use the Mandelbrot set!" class="w3-hover-opacity" style="width:100%" </a>
+      <div class="w3-container w3-white">
+        <p><b>Money Clicker!</b></p>
+        <p>Like cookie clicker, but for money!</p>
+      </div>
+    </div>
+    <div class="w3-third w3-container w3-margin-bottom">
+  <a href="quiz.html"> <img src="https://www.adobe.com/content/dam/cc/us/en/creativecloud/video/discover/how-to-mix-music/desktop/mix-music_P1_900x420.jpg.img.jpg" alt="Money clicker" style="width:100%" class="w3-hover-opacity"> </a>
+      <div class="w3-container w3-white">
+  <a href="quiz.html"> <p><b>Multiple Choice Quiz</b></p>
+        <p>Fun quiz with score counter.</p> </a>
+      </div>
+    </div>
+    </div>
+    <!--
+    <div class="w3-third w3-container">
+      <a href="location.html"> <img src="https://www.pngkit.com/png/detail/236-2364197_google-map-red-clipart-lokasi.png" alt="Location finder" class="w3-hover-opacity" style="width:100%" </a>
+      <div class="w3-container w3-white">
+        <p><b>I will guess your location!</b></p>
+        <p>Fun quiz with score counter.</p>
+      </div>
+    </div>
+  </div>--> <!--             and remove div when undoing the note
+
+
+
+
+
+  <div class="w3-row-padding">
+    <div class="w3-third w3-container w3-margin-bottom">
       <a href="moneyclicker.html"> <img src="https://d1e00ek4ebabms.cloudfront.net/production/6b7c5fa6-b824-4430-b544-2102ad555fd1.jpg" alt="Money clicker" class="w3-hover-opacity" style="width:100%" </a>
       <div class="w3-container w3-white">
 
@@ -136,7 +166,7 @@
           <p>Fun quiz with score counter.</p>
         </div>
       </div>
-      </div>
+      </div>-->
 
    <!-- next -->
    <div class="w3-row-padding w3-padding-16" id="about">
