--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
-  <a href="quiz.html"> <img src="https://53.fs1.hubspotusercontent-na1.net/hub/53/hubfs/google-quiz.jpg?width=595&height=400&name=google-quiz.jpg" alt="Money clicker" style="width:100%" class="w3-hover-opacity"> </a>
+  <a href="quiz.html"> <img src="https://www.rtpi.org.uk/media/12751/quiz-image.jpg" alt="Money clicker" style="width:100%" class="w3-hover-opacity"> </a>
       <div class="w3-container w3-white">
   <a href="quiz.html"> <p><b>Multiple Choice Quiz</b></p>
         <p>Fun quiz with score counter.</p> </a>
