--- a/chase.html
+++ b/chase.html
@@ -2,146 +2,105 @@
 <html>
 <head>
 	<title>Chase Game</title>
+	<style>
+		body {
+			margin: 0;
+			padding: 0;
+		}
+
+		#player {
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			transform: translate(-50%, -50%);
+			width: 50px;
+			height: 50px;
+			background-color: red;
+			border-radius: 50%;
+		}
+
+		#target {
+			position: absolute;
+			top: 100px;
+			left: 100px;
+			width: 50px;
+			height: 50px;
+			background-color: green;
+			border-radius: 50%;
+		}
+	</style>
 </head>
 <body>
-	<div class="game-container">
-		<div class="scoreboard">
-			<span>Score:</span> <span id="score">0</span>
-		</div>
-		<div class="game-area">
-			<div id="player"></div>
-			<div id="target"></div>
-		</div>
-	</div>
-
-    <style>
-
-* {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-}
-
-.game-container {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	height: 100vh;
-	background-color: #f7f7f7;
-}
-
-.scoreboard {
-	font-size: 2rem;
-	margin-bottom: 2rem;
-}
-
-.game-area {
-	position: relative;
-	width: 800px;
-	height: 600px;
-	border: 5px solid black;
-}
-
-#player {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	width: 50px;
-	height: 50px;
-	background-color: red;
-	border-radius: 50%;
-}
-
-#target {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 50px;
-	height: 50px;
-	background-color: green;
-	border-radius: 50%;
-}
-
-.game-over {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	font-size: 3rem;
-	color: red;
-	text-align: center;
-}
-
-
-    </style>
-
+	<div id="player"></div>
+	<div id="target"></div>
 	<script>
+		const player = document.querySelector("#player");
+		const target = document.querySelector("#target");
 
-const player = document.getElementById('player');
-const target = document.getElementById('target');
-const scoreBoard = document.getElementById('score');
-const gameOverText = document.querySelector('.game-over');
+		let score = 0;
+		let isGameOver = false;
 
-let score = 0;
-let gameOver = false;
+		function randomPosition() {
+			return Math.floor(Math.random() * 85) + "vh";
+		}
 
-function updateScore() {
-	scoreBoard.innerText = score;
-}
+		function updateTarget() {
+			target.style.top = randomPosition();
+			target.style.left = randomPosition();
+		}
 
-function moveTarget() {
-	const x = Math.floor(Math.random() * 700);
-	const y = Math.floor(Math.random() * 500);
+		function increaseScore() {
+			score++;
+			console.log("Score: ", score);
+			updateTarget();
+		}
 
-	target.style.top = y + 'px';
-	target.style.left = x + 'px';
-}
+		function endGame() {
+			isGameOver = true;
+			alert("Game Over! Your final score is: " + score);
+		}
 
-function checkCollision() {
-	const playerX = player.offsetLeft;
-	const playerY = player.offsetTop;
-	const targetX = target.offsetLeft;
-	const targetY = target.offsetTop;
+		function moveTargetAway() {
+			const playerPosition = player.getBoundingClientRect();
+			const targetPosition = target.getBoundingClientRect();
 
-	if (playerX + player.offsetWidth > targetX && playerX < targetX + target.offsetWidth &&
-		playerY + player.offsetHeight > targetY && playerY < targetY + target.offsetHeight) {
-		score++;
-		updateScore();
-		moveTarget();
-	}
-}
+			const targetX = targetPosition.left + targetPosition.width / 2;
+			const targetY = targetPosition.top + targetPosition.height / 2;
 
-function gameOverFunction() {
-	gameOver = true;
-	gameOverText.innerText = "Game Over";
-}
+			const playerX = playerPosition.left + playerPosition.width / 2;
+			const playerY = playerPosition.top + playerPosition.height / 2;
 
-function movePlayer(e) {
-	if (gameOver) {
-		return;
-	}
-	switch(e.keyCode) {
-		case 37:
-			player.style.left = player.offsetLeft - 10 + 'px';
-			break;
-		case 38:
-			player.style.top = player.offsetTop - 10 + 'px';
-			break;
-		case 39:
-			player.style.left = player.offsetLeft + 10 + 'px';
-			break;
-		case 40:
-			player.style.top = player.offsetTop + 10 + 'px';
-			break;
-	}
-	checkCollision();
-}
+			const deltaX = targetX - playerX;
+			const deltaY = targetY - playerY;
+			const distance = Math.sqrt(deltaX * deltaX + deltaY * deltaY);
 
-document.addEventListener('keydown', movePlayer);
+			if (distance < 150) {
+				const angle = Math.atan2(deltaY, deltaX);
+				const directionX = Math.cos(angle) * 10;
+				const directionY = Math.sin(angle) * 10;
 
+				target.style.left = targetPosition.left - directionX + "px";
+				target.style.top = targetPosition.top - directionY + "px";
+			}
+		}
 
-    </script>
+		setInterval(() => {
+			if (!isGameOver) {
+				moveTargetAway();
+			}
+		}, 100);
+
+		player.addEventListener("mouseover", () => {
+			if (!isGameOver) {
+				increaseScore();
+			}
+		});
+
+		setTimeout(() => {
+			if (!isGameOver) {
+				endGame();
+			}
+		}, 30000);
+	</script>
 </body>
 </html>
