--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     </div>
   </div>
   <div class="w3-third w3-container">
-    <a href="location.html"> <img src="https://www.maxpixel.net/static/photo/640/Point-Pin-Map-Pointer-Pinpoint-Location-162102.png" alt="Location finder" class="w3-hover-opacity" style="width:100%" </a>
+    <a href="location.html"> <img src="https://icons-for-free.com/iconfiles/png/512/circle+gps+location+map+marker+navigation+icon-1320196703757589293.png" alt="Location finder" class="w3-hover-opacity" style="width:100%" </a>
     <div class="w3-container w3-white">
       <p><b>I will guess your location!</b></p>
       <p>I can determine your location from your favourite colour, number etc.</p>
