--- a/simonsays.html
+++ b/simonsays.html
@@ -85,7 +85,7 @@
           <h2>Congratulations!</h2></br>
         <button id="play-again-button" onclick="resetPush()">play again?</button>
         </section>
-        <footer>(This game can be 'solved')<br />Created by <a href="https://codepen.io/asickmiller/" target="_blank">Adam Sickmiller</a></footer>
+        <footer><p>This game can be solved!</p></footer>
 
 <style>
 
