--- a/simonsays.html
+++ b/simonsays.html
@@ -90,8 +90,9 @@
 <style>
 
 html, body {
-  background-image: url("https://i.imgur.com/EmRKM5i.png");
+  background-image: url("https://is1-ssl.mzstatic.com/image/thumb/Purple123/v4/a5/e1/ab/a5e1ab4e-8d15-8650-6963-595dd958a710/source/512x512bb.jpg");
   background-color:#ccc;
+  background-repeat: repeat;
 }
 
 header {
