--- a/simonsays.html
+++ b/simonsays.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+      <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <meta name="description" content="A site to do random stuff if you're bored!">
+    <meta name="keywords" content="fun, neal.fun, boredbutton, bored, have fun,">
+    <meta name="author" content="NicoWebCreations">
+    <link rel="icon" type="image/x-icon" href="favicon.png">
+
+<title>Simon Says</title>
     </head>
     <body>
 
