--- a/index.html
+++ b/index.html
@@ -134,19 +134,18 @@
       </div>
     </div>
     </div>
-    <!--
+ 
     <div class="w3-third w3-container">
-      <a href="location.html"> <img src="https://www.pngkit.com/png/detail/236-2364197_google-map-red-clipart-lokasi.png" alt="Location finder" class="w3-hover-opacity" style="width:100%" </a>
+      <a href="simonsays.html"> <img src="https://freesimon.org/images/simon-game-card.png" alt="Simon Says" class="w3-hover-opacity" style="width:100%" </a>
       <div class="w3-container w3-white">
-        <p><b>I will guess your location!</b></p>
-        <p>Fun quiz with score counter.</p>
+        <p><b>Play Simon Says!</b></p>
+        <p>Beat your old score!</p>
       </div>
     </div>
-  </div>--> <!--             and remove div when undoing the note
-
-
-
-
+  </div>
+  
+  
+  <!-- 
 
   <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom">
